Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56952

[REG: 5.4.2->5.5.0] Duplicated hotkeys in menus not working in some styles if first action is disabled

    XMLWordPrintable

Details

    Description

      Seems to affect at least styles with AltKeyNavigation style hint. Quick bisect reveals commit 0ed68f3f58c63bd1496cb268bd83881da180051f as the one that breaks it.

      To reproduce:

      • run attached application
      • press alt+n
      • press o multiple times

      Before this used to move highlight over the disabled item, but now it does not.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes